--- a/Heart_EDA_Preprocessor.ipynb
+++ b/Heart_EDA_Preprocessor.ipynb
@@ -55,6 +55,58 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import time\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import LabelEncoder, label_binarize\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, auc, f1_score\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.utils import resample\n",
+        "from itertools import cycle\n",
+        "\n",
+        "# Set visualization style\n",
+        "sns.set(style=\"whitegrid\")"
+      ],
+      "metadata": {
+        "id": "utK6AtiThwSb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import time\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import LabelEncoder, label_binarize\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, auc, f1_score\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.utils import resample\n",
+        "from itertools import cycle\n",
+        "\n",
+        "# Set visualization style\n",
+        "sns.set(style=\"whitegrid\")"
+      ],
+      "metadata": {
+        "id": "YDTgb82Hh4dD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "umzfoMInr0IO"
@@ -1033,6 +1085,67 @@
         "print(f\"Training Data Shape: {X_train.shape}\")\n",
         "print(f\"Testing Data Shape: {X_test.shape}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import time\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import LabelEncoder, label_binarize\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, auc, f1_score\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.utils import resample\n",
+        "from itertools import cycle\n",
+        "\n",
+        "# Set visualization style\n",
+        "sns.set(style=\"whitegrid\")"
+      ],
+      "metadata": {
+        "id": "Rzvko4_-h6P6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import time\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import LabelEncoder, label_binarize\n",
+        "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score, roc_curve, auc, f1_score\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.utils import resample\n",
+        "from itertools import cycle\n",
+        "\n",
+        "# Set visualization style\n",
+        "sns.set(style=\"whitegrid\")"
+      ],
+      "metadata": {
+        "id": "VpOXkCsEh7DE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Training **part**"
+      ],
+      "metadata": {
+        "id": "HL2uTLvWh8gN"
+      }
     }
   ],
   "metadata": {
