added some more steps

--- a/Heart_EDA_Preprocessor.ipynb
+++ b/Heart_EDA_Preprocessor.ipynb
@@ -1146,6 +1146,24 @@
       "metadata": {
         "id": "HL2uTLvWh8gN"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "sSJn55LFitoL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "This is the toturial video for my students"
+      ],
+      "metadata": {
+        "id": "XqtIXocXitW_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
