The complete code

--- a/Heart_EDA_Preprocessor.ipynb
+++ b/Heart_EDA_Preprocessor.ipynb
@@ -1164,6 +1164,137 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Section 2: Data Loading and Exploration\n",
+        "\n",
+        "### 2.1 Dataset Description\n",
+        "\n",
+        "The **emotion** dataset from Hugging Face contains English Twitter messages labeled with six emotion categories:\n",
+        "\n",
+        "| Label ID | Emotion | Description |\n",
+        "|----------|---------|-------------|\n",
+        "| 0 | Sadness | Expressions of sorrow, grief, or unhappiness |\n",
+        "| 1 | Joy | Expressions of happiness, delight, or pleasure |\n",
+        "| 2 | Love | Expressions of affection, fondness, or attachment |\n",
+        "| 3 | Anger | Expressions of frustration, annoyance, or rage |\n",
+        "| 4 | Fear | Expressions of worry, anxiety, or apprehension |\n",
+        "| 5 | Surprise | Expressions of astonishment or unexpectedness |\n",
+        "\n",
+        "The dataset is pre-split into training, validation, and test sets, making it suitable for model development and evaluation.\n",
+        "\n",
+        "**Source:** https://huggingface.co/datasets/emotion\n"
+      ],
+      "metadata": {
+        "id": "WMJ2M7wcjReI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# =============================================================================\n",
+        "# 2.2 Load the Emotion Dataset from Hugging Face\n",
+        "# =============================================================================\n",
+        "# The dataset is loaded using the Hugging Face datasets library\n",
+        "# It comes pre-split into train, validation, and test sets\n",
+        "\n",
+        "# Load the emotion dataset\n",
+        "print(\"Loading emotion dataset from Hugging Face...\")\n",
+        "dataset = load_dataset(\"emotion\")\n",
+        "\n",
+        "# Display dataset structure\n",
+        "print(\"\\nDataset Structure:\")\n",
+        "print(dataset)\n",
+        "\n",
+        "# Define emotion labels mapping for later use\n",
+        "EMOTION_LABELS = {\n",
+        "    0: 'sadness',\n",
+        "    1: 'joy',\n",
+        "    2: 'love',\n",
+        "    3: 'anger',\n",
+        "    4: 'fear',\n",
+        "    5: 'surprise'\n",
+        "}\n",
+        "\n",
+        "# Reverse mapping for encoding\n",
+        "LABEL_TO_ID = {v: k for k, v in EMOTION_LABELS.items()}\n",
+        "\n",
+        "NUM_LABELS = len(EMOTION_LABELS)\n",
+        "print(f\"\\nNumber of emotion classes: {NUM_LABELS}\")\n",
+        "print(f\"Emotion labels: {list(EMOTION_LABELS.values())}\")\n"
+      ],
+      "metadata": {
+        "id": "NUSh0k2ljWIn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# =============================================================================\n",
+        "# 2.3 Convert Dataset to Pandas DataFrames for Analysis\n",
+        "# =============================================================================\n",
+        "# Converting to pandas enables easier data manipulation and visualization\n",
+        "# We maintain separate DataFrames for train, validation, and test sets\n",
+        "\n",
+        "def dataset_to_dataframe(hf_dataset, split_name):\n",
+        "    \"\"\"\n",
+        "    Convert a Hugging Face dataset split to a pandas DataFrame.\n",
+        "\n",
+        "    Args:\n",
+        "        hf_dataset: Hugging Face dataset object\n",
+        "        split_name (str): Name of the split ('train', 'validation', 'test')\n",
+        "\n",
+        "    Returns:\n",
+        "        pd.DataFrame: DataFrame with text and label columns\n",
+        "    \"\"\"\n",
+        "    df = pd.DataFrame(hf_dataset[split_name])\n",
+        "    # Add emotion name column for readability\n",
+        "    df['emotion'] = df['label'].map(EMOTION_LABELS)\n",
+        "    return df\n",
+        "\n",
+        "# Convert all splits to DataFrames\n",
+        "train_df = dataset_to_dataframe(dataset, 'train')\n",
+        "val_df = dataset_to_dataframe(dataset, 'validation')\n",
+        "test_df = dataset_to_dataframe(dataset, 'test')\n",
+        "\n",
+        "# Display dataset sizes\n",
+        "print(\"Dataset Split Sizes:\")\n",
+        "print(f\"  Training set:   {len(train_df):,} samples\")\n",
+        "print(f\"  Validation set: {len(val_df):,} samples\")\n",
+        "print(f\"  Test set:       {len(test_df):,} samples\")\n",
+        "print(f\"  Total:          {len(train_df) + len(val_df) + len(test_df):,} samples\")\n"
+      ],
+      "metadata": {
+        "id": "GyspmXU6jY2I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# =============================================================================\n",
+        "# 2.4 Display Sample Data\n",
+        "# =============================================================================\n",
+        "# Examining sample data helps understand the nature and quality of the dataset\n",
+        "\n",
+        "print(\"Sample Training Data (First 10 rows):\")\n",
+        "print(\"=\" * 80)\n",
+        "display(train_df.head(10))\n",
+        "\n",
+        "print(\"\\nDataset Information:\")\n",
+        "print(\"=\" * 80)\n",
+        "train_df.info()\n"
+      ],
+      "metadata": {
+        "id": "7_xq030pjaqA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
